Adding animate function

--- a/pages/motion/animation.mdx
+++ b/pages/motion/animation.mdx
@@ -243,7 +243,7 @@ return items.map((item, i) => (
 ))
 ```
 
-## Animation controls
+## Component animation controls
 
 Declarative animations are ideal for most UI interactions. But sometimes we need to orchestrate more complex sequences.
 
@@ -317,6 +317,12 @@ return (
   </ul>
 )
 ```
+
+## Animate single values
+
+It's also possible to imperatively animate single values or a single `MotionValue` with the low-level `animate` function.
+
+<APIFunction name="animate" skipnav />
 
 ---
 
