--- a/pages/motion/utilities.mdx
+++ b/pages/motion/utilities.mdx
@@ -22,6 +22,12 @@ export default Template("Utilities")
 
 ---
 
+## animate
+
+<APIFunction name="animate" />
+
+---
+
 ## Transform
 
 <APIFunction name="(transform:1)" />
