--- a/pages/motion/animation.mdx
+++ b/pages/motion/animation.mdx
@@ -322,6 +322,8 @@ return (
 
 It's also possible to imperatively animate single values or a single `MotionValue` with the low-level `animate` function.
 
+This function is for advanced use-cases where you want to animate a `MotionValue` without binding it to a component, or by using `animate`'s `onUpdate` method to modify the animated value in some way.
+
 <APIFunction name="animate" skipnav />
 
 ---
