Fix copy and buttons (#132)
* Fix copy and buttons

* Fix typo

--- a/pages/motion/help.mdx
+++ b/pages/motion/help.mdx
@@ -27,9 +27,9 @@ export default Template("Help")
 
 ## Code questions
 
-Whenever you are looking for more information on the Motion library, you can join the Framer team and many others in the Framer Discord community.
+If you’re looking for more information on the Framer Motion library, you can join the Framer team and other coders in the Framer Discord community.
 
-In the community, join the **#framer-motion** channel to ask about Motion features, show off your work, or just to get help.
+In the community, visit the #framer-motion channel to ask about features, show off your work, or get help.
 
 [![Discord](https://img.shields.io/discord/341919693348536320?label=Join&logo=Discord&logoColor=white&style=flat-square)](https://discord.gg/64ufkNQ3Zu)
 
@@ -37,7 +37,9 @@ In the community, join the **#framer-motion** channel to ask about Motion featur
 
 If you think you spotted a bug, let us know by issuing a bug report.
 
-<Button
-  name="Issue bug report"
-  link="https://github.com/framer/motion/blob/main/CONTRIBUTING.md"
-/>
+<div>
+  <Button
+    name="Issue bug report"
+    link="https://github.com/framer/motion/blob/main/CONTRIBUTING.md"
+  />
+</div>
