--- a/pages/help.mdx
+++ b/pages/help.mdx
@@ -28,28 +28,32 @@ export default Template("Help")
 
 To ask questions around Framer’s API, we recommend joining the Framer Discord community.
 
-In the community, join the **#code-help** channel to ask about the Framer API or join **#framer-motion** to ask about Motion specifically.
+In the community, visit the #code-help channel to ask about the Framer API or visit #framer-motion to ask about Motion specifically.
 
 [![Discord](https://img.shields.io/discord/341919693348536320?label=Join&logo=Discord&logoColor=white&style=flat-square)](https://discord.gg/hhAJjNVb2J)
 
 ## Support articles
 
-Framer’s support page includes many articles around using Framer and account questions, but also around using code within Framer.
+Framer’s support page includes many articles on using Framer and account questions, but also on common code questions in Framer.
 
-Head over to our support page to view all code-related support articles and to learn much more about leveraging code within Framer.
+Visit our support page to view all code-related support articles and to learn more about leveraging code in Framer.
 
-<Button
-  name="View Code articles"
-  link="https://www.framer.com/support/using-framer/#code"
-/>
+<div>
+  <Button
+    name="View Code articles"
+    link="https://www.framer.com/support/using-framer/#code"
+  />
+</div>
 
 ## Examples
 
-The Framer Examples page contain 60+ interactions created within Framer. Many achieve common interactions without code, but many also do use code.
+The Framer Examples page contains 60+ interactions created in Framer. Many show you how to create common interactions without code, but some examples show you different ways you can use code to add an extra layer of fidelity to your prototypes.
 
-Looking for a certain interaction? Head over to our Examples page to see if we perhaps already covered it!
+Looking for a specific interaction? Visit our Examples page to see if we already covered it!
 
-<Button
-  name="Open Examples page"
-  link="https://www.framer.com/examples"
-/>
+<div>
+  <Button
+    name="Open Examples page"
+    link="https://www.framer.com/examples"
+  />
+</div>
