Add examples to framer/navigation and motion/gestures (#133)
* Add examples to framer/navigation and motion/gestures

* Tweak copy and location of button

--- a/pages/navigation.mdx
+++ b/pages/navigation.mdx
@@ -5,6 +5,7 @@ import {
   APIEnumField,
   Template,
   Callout,
+  Button
 } from "../components"
 import { ReleaseBadge } from "../components/documentation/ReleaseBadge"
 
@@ -18,10 +19,20 @@ export default Template("Navigation Controls")
 </span>
 
 Expressing flows is an important part of the prototyping process, and easy to set up in Framer. Continue reading to learn how to set up your own flows, or create something new for your project.
+<div>
+<Button
+  name="Open example file"
+  link="https://framer.com/projects/new?duplicate=r5n441GCUggw1iJYT883"
+/>
+</div>
 
 <Callout>
-  <strong>Note:</strong> The Navigation API is still currently in Beta. Please reach out to <a href="https://framer.com/support">support@framer.com</a> with any issues.
+  <strong>Note:</strong> The recommended way to navigate from code is to instead add <a href="https://www.framer.com/api/property-controls/#event-handler">an EventHandler property control</a> to a code component. <br/><br/>
+  
+  The following Navigation API is currently in Beta. Please reach out to <a href="https://framer.com/support">support@framer.com</a> with any issues.
 </Callout>
+
+
 ---
 
 <!-- ## useNavigation -->
@@ -48,6 +59,8 @@ export function Button() {
 
 ---
 
+
+
 <!-- ## Transitions -->
 
 <h2>Transitions <ReleaseBadge releaseTag="beta" /></h2>
@@ -61,6 +74,7 @@ import { ComponentInstance } from "./canvas"
 To reference a Component Instance in code, you’ll need to first [create a Design Component](https://www.framer.com/support/using-framer/design-components/), and import it into your Code Component or Override file.
 
 Certain transitions can also accept more arguments to customize it’s behavior. Continue reading to learn more about the properties that can be customized.
+
 
 ---
 
