--- a/pages/motion/gestures.mdx
+++ b/pages/motion/gestures.mdx
@@ -13,6 +13,7 @@ import {
   Ref,
   Callout,
   Todo,
+  Button,
 } from "../../components"
 
 export default Template("Gestures")
@@ -174,6 +175,12 @@ In this model, you can still animate and adjust `x` and `y`, but they will be **
 <APIProperty name="DraggableProps.dragTransition" />
 <APIProperty name="DraggableProps.dragPropagation" />
 <APIProperty name="DraggableProps.dragControls" />
+<div>
+<Button
+  name="Open example file"
+  link="https://framer.com/projects/API-useDragControls--uRarZCGZukBTTqSu15Va-fRvnB?node=lKPPsks8l"
+/>
+</div>
 
 <APIMethod name="DragHandlers.onDrag()" />
 <APIMethod name="DragHandlers.onDragStart()" />
