--- a/pages/page.mdx
+++ b/pages/page.mdx
@@ -79,7 +79,7 @@ export function MyComponent() {
 
 ## Effects
 
-The `Page` component comes with a set of pagination effects that change how pages look as animate as you scroll through them. You can also create custom effects of your own.
+The `Page` component comes with a set of pagination effects that change how pages look and animate as you scroll through them. You can also create custom effects of your own.
 
 ### None
 
