--- a/pages/animation.mdx
+++ b/pages/animation.mdx
@@ -459,10 +459,6 @@ An animation that animates between two or more values over a specific `duration`
 ---
 
 <APIProperty name="Tween.from" />
-<APIProperty name="Tween.loop" />
-<APIProperty name="Tween.flip" />
-<APIProperty name="Tween.yoyo" />
-<APIProperty name="Repeat.repeatDelay" />
 <APIProperty name="Tween.times" />
 
 ## Spring
@@ -496,6 +492,9 @@ This animation will automatically precalculate a target value, which can be modi
 
 Options for orchestrating the timing of animations to build staggered animations or sequences.
 
+<APIProperty name="Repeat.repeat" />
+<APIProperty name="Repeat.repeatType" />
+<APIProperty name="Repeat.repeatDelay" />
 <APIProperty name="Orchestration.delay" />
 <APIProperty name="Orchestration.delayChildren" />
 <APIProperty name="Orchestration.staggerChildren" />
