--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -306,6 +306,7 @@ The following SVG values are not currently compatible with server-side rendering
 
 ### Gesture animations
 
+<APIProperty name="DraggableProps.whileDrag" />
 <APIProperty name="HoverHandlers.whileHover" />
 <APIProperty name="TapHandlers.whileTap" />
 
