Fix: Heading hierarchy (#142)

--- a/pages/animation-deprecated.mdx
+++ b/pages/animation-deprecated.mdx
@@ -12,7 +12,7 @@ import {
 
 export default Template("Animation (deprecated API)")
 
-## Animation (Deprecated)
+# Animation (Deprecated)
 
 <Callout>
 
