--- a/pages/frame-deprecated.mdx
+++ b/pages/frame-deprecated.mdx
@@ -10,7 +10,7 @@ import {
 
 export default Template("Frame (deprecated API)")
 
-## Frame (Deprecated) <RefAnchor name="DeprecatedFrame" />
+# Frame (Deprecated) <RefAnchor name="DeprecatedFrame" />
 
 <Callout>
 
