--- a/pages/animation.mdx
+++ b/pages/animation.mdx
@@ -505,7 +505,7 @@ Options for orchestrating the timing of animations to build staggered animations
 
 <APIClass name="MotionValue" skipnav />
 
-<APIClass name="AnimationControls" skipnav />
+<APIInterface name="AnimationControls" skipnav />
 
 <APIVariable
   name="EasingFunction"
