--- a/pages/frame.mdx
+++ b/pages/frame.mdx
@@ -255,9 +255,9 @@ The following are properties accepted by the `Frame` component for animation, in
 <APIProperty name="AnimationProps.exit" />
 <APIProperty name="AnimationProps.transition" />
 
-<APIFunction name="MotionCallbacks.onUpdate()" />
-<APIFunction name="MotionCallbacks.onAnimationStart()" />
-<APIFunction name="MotionCallbacks.onAnimationComplete()" />
+<APIFunction name="VisualElementLifecycles.onUpdate()" />
+<APIFunction name="VisualElementLifecycles.onAnimationStart()" />
+<APIFunction name="VisualElementLifecycles.onAnimationComplete()" />
 
 ## Transition
 
