--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -293,7 +293,7 @@ The following SVG values are not currently compatible with server-side rendering
 <APIProperty name="LayoutProps.layout" />
 <APIProperty name="LayoutProps.layoutId" />
 <APIFunction name="LayoutProps.onLayoutAnimationComplete" />
-<APIFunction name="LayoutProps.onViewportBoxUpdate()" />
+<APIFunction name="VisualElementLifecycles.onViewportBoxUpdate()" />
 
 ### Drag
 
@@ -312,9 +312,9 @@ The following SVG values are not currently compatible with server-side rendering
 
 ### Animation events
 
-<APIFunction name="MotionCallbacks.onUpdate()" />
-<APIFunction name="MotionCallbacks.onAnimationStart()" />
-<APIFunction name="MotionCallbacks.onAnimationComplete()" />
+<APIFunction name="VisualElementLifecycles.onUpdate()" />
+<APIFunction name="VisualElementLifecycles.onAnimationStart()" />
+<APIFunction name="VisualElementLifecycles.onAnimationComplete()" />
 
 ### Hover events
 
