--- a/pages/motion/types.mdx
+++ b/pages/motion/types.mdx
@@ -154,7 +154,7 @@ Inertia is also the animation used for `dragTransition`, and can be configured v
 
 ---
 
-<APIClass name="AnimationControls" />
+<APIInterface name="AnimationControls" />
 
 ## Misc
 
