Adding docs for useVelocity (#151)

--- a/pages/motion/motionvalue.mdx
+++ b/pages/motion/motionvalue.mdx
@@ -182,6 +182,12 @@ These child components can be used exactly like the parents. They can be passed 
 
 ---
 
+## useVelocity
+
+<APIFunction name="useVelocity()" />
+
+---
+
 ## useViewportScroll
 
 <APIFunction name="useViewportScroll()" />
