Remove canvas component references (#154)
* Remove Navigation and Canvas links from Navigation

* Remove navigation and canvas pages

* Update old references

* Move utility function to Utilities

--- a/pages/utilities.mdx
+++ b/pages/utilities.mdx
@@ -313,3 +313,7 @@ export function MyComponent() {
 ## useIsInCurrentNavigationTarget
 
 <APIFunction name="useIsInCurrentNavigationTarget()" />
+
+---
+
+<APIReactComponent name="AutomaticLayoutIds" />
