--- a/pages/motion/examples.mdx
+++ b/pages/motion/examples.mdx
@@ -336,7 +336,7 @@ export const Slideshow = ({ image }) => (
 )
 ```
 
-You can also add the `exitBeforeEnter` prop to `AnimatePresence` if you'd like the entrace animation to wait until the exit animation has ended before starting.
+You can also add the `exitBeforeEnter` prop to `AnimatePresence` if you'd like the entrance animation to wait until the exit animation has ended before starting.
 
 ---
 
