Fix wrong closing tag in the example (#167)

--- a/pages/motion/motion-config.mdx
+++ b/pages/motion/motion-config.mdx
@@ -41,7 +41,7 @@ export const MyComponent = ({ isVisible }) => (
         initial={{ opacity: 0 }}
         animate={{ opacity: 1 }}
       />
-  </AnimatePresence>
+  </MotionConfig>
 )
 ```
 
