Fix hierarchy-level of subheadline (#155)

--- a/pages/motion/guide-upgrade.mdx
+++ b/pages/motion/guide-upgrade.mdx
@@ -104,7 +104,7 @@ This leads to a few behavioural changes:
 
 If we don't find one in `animate`, it'll check in `style`, or fallback to its initially-recorded value (for instance if the value was initially read from the DOM because none was explicitly defined).
 
-## That's all!
+### That's all!
 
 These are subtle changes that will probably not affect the majority of projects, but they're worth being aware of.
 
