--- a/pages/motion/lazy-motion.mdx
+++ b/pages/motion/lazy-motion.mdx
@@ -38,7 +38,7 @@ import { LazyMotion, domAnimation, m } from "framer-motion"
 export const MyComponent = ({ isVisible }) => (
   <LazyMotion features={domAnimation}>
     <m.div animate={{ opacity: 1 }} />
-  </AnimatePresence>
+  </LazyMotion>
 )
 ```
 
@@ -46,7 +46,7 @@ By default, the `motion` component comes pre-bundled with all of its features. T
 
 This can cut initial bundle sizes down to under 5kb.
 
-Read the [Reduce bundle size](guide-reduce-bundle-size) guide for full usage instructions.
+Read the [Reduce bundle size](/api/motion/guide-reduce-bundle-size) guide for full usage instructions.
 
 ---
 
