Update guide-upgrade.mdx (#160)

--- a/pages/motion/guide-upgrade.mdx
+++ b/pages/motion/guide-upgrade.mdx
@@ -41,7 +41,7 @@ import { LazyMotion, domAnimation, m } from "framer-motion"
 export const MyComponent = ({ isVisible }) => (
   <LazyMotion features={domAnimation}>
     <m.div animate={{ opacity: 1 }} />
-  </AnimatePresence>
+  </LazyMotion>
 )
 ```
 
