fix: typo in transformTemplate (#130)

--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -129,7 +129,7 @@ However, you can customize this default order using the [`transformTemplate` pro
 
 ```jsx
 function template({ rotate, x }) {
-  return `rotate(${rotate}deg) translateX(${x}px)`
+  return `rotate(${rotate}) translateX(${x})`
 }
 
 return (
