Adding note to example

--- a/pages/motion/animate-presence.mdx
+++ b/pages/motion/animate-presence.mdx
@@ -185,6 +185,11 @@ const Item = () => (
   </div>
 )
 
+/**
+ * The component being removed must be a direct
+ * descendant of AnimatePresence due to limitations
+ * with React.
+ */
 export const MyComponent = ({ items }) => (
   <AnimatePresence>
     {items.map(({ id }) => (
