Fix setting the state in variants section in motion/examples.mdx (#110)
Co-authored-by: Marc Bouchenoire <bouchenoire.marc@sfr.fr>

--- a/pages/motion/examples.mdx
+++ b/pages/motion/examples.mdx
@@ -133,7 +133,7 @@ export const MyComponent = () => {
       animate={isOpen ? "open" : "closed"}
       variants={variants}
     >
-      <Toggle onClick={() => setIsOpen(!isOpen)} />
+      <Toggle onClick={() => setIsOpen(isOpen => !isOpen)} />
       <Items />
     </motion.nav>
   )
