Add docs for focus feature (#135)
Co-authored-by: Marc Bouchenoire <bouchenoire.marc@sfr.fr>

--- a/pages/motion/gestures.mdx
+++ b/pages/motion/gestures.mdx
@@ -121,6 +121,24 @@ It differs from `onMouseEnter` and `onMouseLeave` in that hover is guaranteed to
 <APIMethod name="HoverHandlers.onHoverStart()" />
 <APIMethod name="HoverHandlers.onHoverEnd()" />
 
+
+## Focus
+
+<div>
+
+The focus gesture detects when a component gains or loses focus through click, focus(), or by tabIndex.
+
+</div>
+
+```jsx
+<motion.a
+  whileFocus={{ scale: 1.2 }}
+  href="#"
+/>
+```
+
+<APIProperty name="FocusHandlers.whileFocus" />
+
 ## Tap
 
 <div>
