Update all 'static.framer.com' links (#175)

--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -78,7 +78,7 @@ We’ve prepared starter files for CodeSandbox and Framer with React and the Fra
 
 <Button
   name="Framer Starter File"
-  link="https://static.framer.com/api/tutorial-start.framerx"
+  link="https://misc.framerstatic.com/api/tutorial-start.framerx"
 />
 
 <br /><br />
@@ -126,7 +126,7 @@ export function App() {
     >
       <Frame
         center
-        image={"https://static.framer.com/api/logo.jpg"}
+        image={"https://misc.framerstatic.com/api/logo.jpg"}
         radius={4}
       />
     </Frame>
@@ -493,7 +493,7 @@ The image `Frame` will be set to `center` and have a scale of 25%. It will also 
     scale={0.25}
     center
     size={480}
-    image={"https://static.framer.com/api/bg.jpg"}
+    image={"https://misc.framerstatic.com/api/bg.jpg"}
   />
   <Slider />
 </Frame>
@@ -821,7 +821,7 @@ Below are completed tutorial files which may be helpful if you ran into any issu
 
 <Button
   name="Framer Completed Tutorial"
-  link="https://static.framer.com/api/tutorial-complete.framerx"
+  link="https://misc.framerstatic.com/api/tutorial-complete.framerx"
 />
 </div>
 <div>
